commit translated contents

--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -227,7 +227,7 @@
     - name: Kookboeken
       items:
         - name: Referentiearchitecturen
-          href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/#web-applications'
+          href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/app-service-web-app/basic-web-app'
         - name: Implementatiescripts
           href: 'https://azure.microsoft.com/documentation/scripts/'
     - name: Problemen oplossen
