--- a/articles/service-bus-relay/TOC.yml
+++ b/articles/service-bus-relay/TOC.yml
@@ -36,6 +36,8 @@
       href: relay-authentication-and-authorization.md
     - name: Protocol hybride verbindingen
       href: relay-hybrid-connections-protocol.md
+    - name: Algemene Azure-beveiligingskenmerken
+      href: service-bus-relay-security-attributes.md
 - name: Procedures
   items:
     - name: Plannen en ontwerpen
