--- a/articles/ansible/index.yml
+++ b/articles/ansible/index.yml
@@ -1,70 +1,64 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ca77662e7756d74f8f939e78af626b7f2da2a3c4
-ms.sourcegitcommit: d89b679d20ad45d224fd7d010496c52345f10c96
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57792715"
 documentType: LandingData
 title: Documentatie over Ansible op Azure
 metadata:
-  title: Documentatie over Ansible op Azure - zelfstudies, voorbeelden, verwijzingen en resources
-  description: Leer Ansible gebruiken om cloudinrichting, configuratiebeheer en toepassingsimplementaties te automatiseren.
+  title: 'Documentatie over Ansible op Azure - zelfstudies, voorbeelden, verwijzingen en resources'
+  description: 'Leer Ansible gebruiken om cloudinrichting, configuratiebeheer en toepassingsimplementaties te automatiseren.'
   ms.service: azure
-  keywords: ansible, azure, devops, zelfstudies, voorbeelden, verwijzing
+  keywords: 'ansible, azure, devops, zelfstudies, voorbeelden, verwijzing'
   author: tomarchermsft
   manager: jeconnoc
   ms.author: tarcher
   ms.topic: landing-page
-  ms.date: 08/27/2018
+  ms.date: 04/22/2019
 abstract:
-  description: Gebruik <a href="https://www.ansible.com">Ansible</a> om cloudinrichting, configuratiebeheer en toepassingsimplementaties te automatiseren.
+  description: 'Gebruik <a href="https://www.ansible.com">Ansible</a> om cloudinrichting, configuratiebeheer en toepassingsimplementaties te automatiseren.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer hoe u Ansible installeert en gebruikt voor het maken en beheren van virtuele Linux-machines in Azure.
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: /azure/media/index/azure_dev-9.svg
-      text: Ansible installeren
-      href: /azure/virtual-machines/linux/ansible-install-configure?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
-    - image:
-        src: /azure/media/index/VirtualMachine.svg
-      text: Een Linux-VM maken
-      href: /azure/virtual-machines/linux/ansible-create-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
-    - image:
-        src: /azure/media/index/VirtualMachine.svg
-      text: Een Linux-VM beheren
-      href: /azure/virtual-machines/linux/ansible-manage-linux-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Leer hoe u Ansible gebruikt om berekening-, netwerk- en opslaginfrastructuur te maken in Azure.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Leer hoe u Ansible installeert en gebruikt voor het maken en beheren van virtuele Linux-machines in Azure.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/media/index/azure_dev-9.svg
+            text: Ansible installeren
+            href: /azure/virtual-machines/linux/ansible-install-configure?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
+          - image:
+              src: /azure/media/index/VirtualMachine.svg
+            text: Een Linux-VM configureren
+            href: /azure/virtual-machines/linux/ansible-create-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
+          - image:
+              src: /azure/media/index/VirtualMachine.svg
+            text: Een Linux-VM beheren
+            href: /azure/virtual-machines/linux/ansible-manage-linux-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/virtual-machines/linux/ansible-create-complete-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json">Maak een virtuele Linux-machine, inclusief een virtueel netwerk, een openbaar IP-adres en een virtuele netwerkinterfacekaart.</a>
-    - html: <a href="./ansible-run-playbook-in-cloudshell">Voer Ansible uit met Bash in Azure Cloudshell.</a>
-    - html: <a href="./ansible-manage-azure-dynamic-inventories">Maak en beheer een dynamische voorraad van uw Azure-resources.</a>
-    - html: <a href="./ansible-create-configure-vmss">Maak en beheer schaalsets voor virtuele machines in Azure.</a>
-    - html: <a href="./ansible-deploy-app-vmss">Implementeer toepassingen in schaalsets voor virtuele machines in Azure.</a>
-    - html: <a href="./ansible-create-configure-aks">Maak en beheer Azure Kubernetes Service-clusters.</a>
-    - html: <a href="./ansible-create-configure-application-gateway">Webverkeer beheren met een Azure-toepassingsgateway.</a>
-    - html: <a href="./ansible-auto-scale-vmss">Een virtuele-machineschaalset automatisch schalen in Azure met Ansible.</a>
-    - html: <a href="./ansible-scale-azure-web-apps">Web-apps van Azure App Service schalen met Ansible.</a>
-    - html: <a href="./ansible-create-configure-route-table">Een Azure-routetabel maken, wijzigen of verwijderen met Ansible.</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Leer hoe u Ansible gebruikt om berekening-, netwerk- en opslaginfrastructuur te maken in Azure.'
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="/azure/virtual-machines/linux/ansible-create-complete-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json">Maak een virtuele Linux-machine, inclusief een virtueel netwerk, een openbaar IP-adres en een virtuele netwerkinterfacekaart.</a>'
+          - html: <a href="./ansible-run-playbook-in-cloudshell">Voer Ansible uit met Bash in Azure Cloudshell.</a>
+          - html: <a href="./ansible-manage-azure-dynamic-inventories">Maak en beheer een dynamische voorraad van uw Azure-resources.</a>
+          - html: <a href="./ansible-create-configure-vmss">Maak en beheer schaalsets voor virtuele machines in Azure.</a>
+          - html: <a href="./ansible-deploy-app-vmss">Implementeer toepassingen in schaalsets voor virtuele machines in Azure.</a>
+          - html: <a href="./ansible-create-configure-aks">Maak en beheer Azure Kubernetes Service-clusters.</a>
+          - html: <a href="./ansible-create-configure-application-gateway">Webverkeer beheren met een Azure-toepassingsgateway.</a>
+          - html: <a href="./ansible-auto-scale-vmss">Een virtuele-machineschaalset automatisch schalen in Azure met Ansible.</a>
+          - html: <a href="./ansible-scale-azure-web-apps">Web-apps van Azure App Service schalen met Ansible.</a>
+          - html: '<a href="./ansible-create-configure-route-table">Een Azure-routetabel maken, wijzigen of verwijderen met Ansible.</a>'
+  - title: Naslaginformatie
     items:
-    - title: Playbook-rollen
-      html: <p><a href="https://galaxy.ansible.com/Azure/azure_preview_modules/">azure_preview_module</a></p>
-    - title: Versies en functies
-      html: <p><a href="./ansible-matrix.md">Matrix van functies voor modules en rollen</a></p>
-    - title: Hulpprogramma's
-      html: <p><a href="https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible">Visual Studio Code-extensie voor Ansible</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Playbook-rollen
+            html: '<p><a href="https://galaxy.ansible.com/Azure/azure_preview_modules/">azure_preview_module</a></p>'
+          - title: Versies en functies
+            html: <p><a href="./ansible-matrix.md">Matrix van functies voor modules en rollen</a></p>
+          - title: Hulpprogramma's
+            html: '<p><a href="https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible">Visual Studio Code-extensie voor Ansible</a></p>'
