--- a/articles/cognitive-services/Anomaly-Detector/toc.yml
+++ b/articles/cognitive-services/Anomaly-Detector/toc.yml
@@ -32,6 +32,8 @@
       items:
         - name: .NET
           href: 'https://aka.ms/anomaly-detector-dotnet-ref'
+        - name: Aan de slag
+          href: 'https://go.microsoft.com/fwlink/?linkid=2089915'
 - name: Resources
   items:
     - name: Prijzen
