--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -292,6 +292,12 @@
           href: '/powershell/module/az.policyinsights#policy_insights'
         - name: Gastconfiguratie
           href: 'https://www.powershellgallery.com/packages/Az.GuestConfiguration'
+    - name: Azure-SDK voor .NET
+      items:
+        - name: Toewijzingen
+          href: /dotnet/api/microsoft.azure.management.resourcemanager.models.policyassignment
+        - name: Definities voor beleid
+          href: /dotnet/api/microsoft.azure.management.resourcemanager.models.policydefinition
     - name: REST
       items:
         - name: Gebeurtenissen
