--- a/articles/time-series-insights/index.yml
+++ b/articles/time-series-insights/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f55ef6f8829db7033790e21653e01a5390be7992
-ms.sourcegitcommit: e37fa6e4eb6dbf8d60178c877d135a63ac449076
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 12/13/2018
-ms.locfileid: "53323146"
 documentType: LandingData
 title: Documentatie voor Azure Time Series Insights
 metadata:
-  title: Documentatie voor Azure Time Series Insights - Quickstarts, zelfstudies, API-verwijzing | Microsoft Docs
-  description: Leer hoe u Azure IoT-analyses uitvoert in de cloud met volledig beheerde gebeurtenisverwerking. Analyseer gegevens van toepassingen, sensoren, apparaten en meer in realtime.
+  title: 'Documentatie voor Azure Time Series Insights - Quickstarts, zelfstudies, API-verwijzing | Microsoft Docs'
+  description: 'Leer hoe u Azure IoT-analyses uitvoert in de cloud met volledig beheerde gebeurtenisverwerking. Analyseer gegevens van toepassingen, sensoren, apparaten en meer in realtime.'
   services: time-series-insights
   author: anshan
   manager: cshankar
@@ -17,51 +11,51 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 12/07/2018
+  ms.date: 04/23/2019
   ms.author: anshan
 abstract:
-  description: "Welkom bij Azure Time Series Insights. Azure Time Series Insights biedt krachtige hulpprogramma's voor gegevensverkenning en telemetrie om u te helpen uw operationele analyse te verbeteren. In de documentatie worden de vele functies van de service, hoe u aan de slag gaat en de krachtige Time Series Insights-API's beschreven. Informatie wordt in twee versies gepresenteerd: een algemeen beschikbare (Time Series Insights GA) en een in preview (Time Series Insights preview)."
+  description: 'Welkom bij Azure Time Series Insights. Azure Time Series Insights biedt krachtige hulpprogramma''s voor gegevensverkenning en telemetrie om u te helpen uw operationele analyse te verbeteren. In deze documentatie wordt de service beschreven, hoe u werkt met de vele functies, de client-SDK en de krachtige Time Series Insights-API''s. De informatie wordt voor twee versies gepresenteerd: een die al algemeen beschikbaar is (Time Series Insights GA) en een grote serviceupdate die nog in preview is (Time Series Insights Preview).'
   aside:
     image:
       alt: Een video-inleiding over functies van Azure IoT Time Series Insights.
       height: 110
       src: media/index/new-tsi-intro.png
       width: 250
-    title: Time Series Insights voor IoT-apps. (13:31)
-    href: https://channel9.msdn.com/Shows/Internet-of-Things-Show/Azure-Time-Series-Insights-e2e-solution-for-industrial-IoT-analytics
+    title: 'Time Series Insights voor IoT-apps. (13:31)'
+    href: 'https://channel9.msdn.com/Shows/Internet-of-Things-Show/Azure-Time-Series-Insights-e2e-solution-for-industrial-IoT-analytics'
     width: 250
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer meer over Azure Time Series Insights door snelle voorbeelden te ontdekken waarmee u binnen minuten aan de slag bent.
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/azure/time-series-insights/media/index/time-series-insights.svg
-      text: Azure Time Series Insights GA verkennen
-      href: /azure/time-series-insights/time-series-quickstart
-  - html: <p><a href="/azure/time-series-insights/time-series-insights-update-quickstart">Azure Time Series Insights preview verkennen</a></p>
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: paragraph
-    text: Informatie over hoe u Azure Time Series Insights-omgevingen, web-apps met één pagina en meer maakt aan de hand van verschillende stapsgewijze voorbeelden.
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Leer meer over Azure Time Series Insights door snelle voorbeelden te ontdekken waarmee u binnen minuten aan de slag bent.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/azure/time-series-insights/media/index/time-series-insights.svg'
+            text: Azure Time Series Insights GA verkennen
+            href: /azure/time-series-insights/time-series-quickstart
+      - html: <p><a href="/azure/time-series-insights/time-series-insights-update-quickstart">Azure Time Series Insights preview verkennen</a></p>
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - title: Azure Time Series Insights GA
-      html: <p><a href="/azure/time-series-insights/tutorial-create-populate-tsi-environment">Een omgeving maken</a></p> <p><a href="/azure/time-series-insights/tutorial-create-tsi-sample-spa">Een web-app met één pagina maken</a></p> <p><a href="/azure/time-series-insights/tutorial-explore-js-client-lib">De JavaScript-clientbibliotheek verkennen</a></p>
-    - title: Azure Time Series Insights preview
-      html: <p><a href="/azure/time-series-insights/time-series-insights-update-create-environment">Preview-zelfstudie</a></p>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Informatie over hoe u Azure Time Series Insights-omgevingen, web-apps met één pagina en meer maakt aan de hand van verschillende stapsgewijze voorbeelden.'
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Azure Time Series Insights GA
+            html: <p><a href="/azure/time-series-insights/tutorial-create-populate-tsi-environment">Een omgeving maken</a></p> <p><a href="/azure/time-series-insights/tutorial-create-tsi-sample-spa">Een web-app met één pagina maken</a></p> <p><a href="/azure/time-series-insights/tutorial-explore-js-client-lib">De JavaScript-clientbibliotheek verkennen</a></p>
+          - title: Azure Time Series Insights preview
+            html: <p><a href="/azure/time-series-insights/time-series-insights-update-create-environment">Preview-zelfstudie</a></p>
+  - title: Naslaginformatie
     items:
-    - title: Time Series Insights GA-API's
-      html: <p><a href="/rest/api/time-series-insights-management">Resource Management-API</a></p> <p><a href="/rest/api/time-series-insights/ga-query-api">Query-API</a></p> <p><a href="/rest/api/time-series-insights/ga-query-syntax">Querysyntaxis</a></p>
-    - title: Time Series Insights preview-API's
-      html: <p><a href="/rest/api/time-series-insights/preview-query">Query-API</a></p> <p><a href="/rest/api/time-series-insights/preview-model">Model-API</a></p> <p><a href="/rest/api/time-series-insights/preview-env">Omgevings-API</a></p> <p><a href="/rest/api/time-series-insights/preview-tsx">Time Series-expressie-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Time Series Insights GA-API's
+            html: <p><a href="/rest/api/time-series-insights-management">Resource Management-API</a></p> <p><a href="/rest/api/time-series-insights/ga-query-api">Query-API</a></p> <p><a href="/rest/api/time-series-insights/ga-query-syntax">Querysyntaxis</a></p>
+          - title: Time Series Insights preview-API's
+            html: <p><a href="/rest/api/time-series-insights/preview-query">Query-API</a></p> <p><a href="/rest/api/time-series-insights/preview-model">Model-API</a></p> <p><a href="/rest/api/time-series-insights/preview-env">Omgevings-API</a></p> <p><a href="/rest/api/time-series-insights/preview-tsx">Time Series-expressie-API</a></p>
