--- a/articles/virtual-network/index.yml
+++ b/articles/virtual-network/index.yml
@@ -6,14 +6,14 @@ metadata:
   title: 'Documentatie voor Virtual Network - zelfstudies, snelstarts, API-verwijzing | Microsoft Docs'
   meta.description: 'Learn how to use Azure Virtual Network. Quickstarts, tutorials, samples, and more, show you how to deploy a virtual network, control traffic filtering and routing, and connect a virtual network to other virtual networks.'
   services: virtual-network
-  author: jdial
-  manager: jeconnoc
+  author: KumudD
+  manager: twooley
   ms.service: virtual-network
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 03/23/2018
-  ms.author: jdial
+  ms.author: kumud
 abstract:
   description: 'Leer hoe u Azure Virtual Network gebruikt. Aan de hand van stelstarts, zelfstudies, voorbeelden en meer ontdekt u hoe u een virtueel netwerk implementeert, verkeersfilters en -routering beheert en een virtueel netwerk aan andere virtuele netwerken koppelt.'
 sections:
